scrollbar bug fixed

--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -1,7 +1,6 @@
 .higher-order-container {
-	width: 1440px;
-	max-width: 100vw;
 	// width: min(100vw, 1440px);
+	max-width: 1440px;
 	min-height: 100vh;
 	overflow: hidden;
 	background-color: rgba(247, 249, 236, 1);
