--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -9,7 +9,6 @@ html{
 	scroll-behavior: smooth;
 }
 body {
-	// background-color: grey;
 }
 
 h1 {
@@ -40,3 +39,16 @@ p {
 .toggle-button{
 	scale: .4;
 }
+
+/* --------------scrollbar styling----------------- */
+::-webkit-scrollbar {
+	width:5px;
+	height: 5px;
+  }
+  ::-webkit-scrollbar-thumb {
+	background-color: #75AEBB;
+	border-radius: 10px;
+  } 
+  /* ::-webkit-scrollbar-track {
+	background-color: rgb(211, 182, 146);
+  } */
